--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- css 불러오기 -->
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="assets/css/common.css">
 </head>
 <body>
 <!-- nav -->
@@ -16,7 +16,7 @@
         <nav class="navbar bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="img/logo.png" alt="TEST"> MARU TEST HOMEPAGE
+                    <img src="assets/img/logo.png" alt="TEST"> MARU TEST HOMEPAGE
                 </a>
             </div>
         </nav>
