--- a/src/main/resources/templates/layouts/footer.mustache
+++ b/src/main/resources/templates/layouts/footer.mustache
@@ -1,7 +1,7 @@
 <!-- footer -->
 <div class="mb-5 container-fluid">
     <hr>
-    <p>개발자 꿈나무의 코딩방 | <a href="#">Privacy</a> | <a href="#">Terms</a></p>
+    <p>개발자 꿈나무의 코딩방 &nbsp &nbsp <a href="#">Tistory</a> &nbsp &nbsp <a href="#">GitHub</a></p>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
