--- a/src/main/resources/templates/test.mustache
+++ b/src/main/resources/templates/test.mustache
@@ -2,11 +2,11 @@
 
 <!-- content -->
 <div class="bg-light text-black p-5">
-    <div class="bg-info text-black p-3">
-        {{#testList}}
+    {{#testList}}
+    <div class="bg-info text-black p-5" id="content1" style="margin-top: 10px; margin-bottom: 10px;">
         <h2>{{name}}님, 안녕하세요! 나이는 {{age}}살 이시고, 취미는 {{hobby}}이군요!</h2>
-        {{/testList}}
     </div>
+    {{/testList}}
 </div>
 
 
