--- a/src/main/resources/templates/layouts/footer.mustache
+++ b/src/main/resources/templates/layouts/footer.mustache
@@ -1,5 +1,5 @@
 <!-- footer -->
-<div class="mb-5 container-fluid">
+<div class="mb-5 container-fluid" style="margin-top: 25px;">
     <hr>
     <p>개발자 꿈나무의 코딩방 &nbsp &nbsp <a href="#">Tistory</a> &nbsp &nbsp <a href="#">GitHub</a></p>
 </div>
