--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -11,7 +11,7 @@
 </head>
 <body>
 <!-- nav -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-bottom: 25px;">
     <div class="container-fluid">
         <nav class="navbar bg-dark">
             <div class="container">
