회원가입 및 로그인 관련 구현 진행

--- a/src/main/resources/static/assets/css/common.css
+++ b/src/main/resources/static/assets/css/common.css
@@ -28,7 +28,13 @@
 }
 
 #loginform {
-   width: 500px;
+   width: 600px;
+   margin: 0 auto;
+   border: 8px solid #e8e8e8;
+}
+
+#registerform {
+   width: 600px;
    margin: 0 auto;
    border: 8px solid #e8e8e8;
 }
