--- a/src/main/resources/templates/page/login.mustache
+++ b/src/main/resources/templates/page/login.mustache
@@ -2,7 +2,7 @@
 
 <!-- content -->
 <div class="bg-light text-black p-5" id="loginform">
-    <form class="container" action="/login" method="post">
+    <form class="container" action="/loginResult" method="post">
         <div class="mb-3">
             <h2>마루설아 로그인 페이지</h2>
             <label for="id" class="form-label"></label>
