--- a/src/main/resources/templates/page/register.mustache
+++ b/src/main/resources/templates/page/register.mustache
@@ -1,8 +1,23 @@
 {{>layouts/header}}
 
 <!-- content -->
-<div class="bg-light text-black p-5">
-    <h1>여기는 회원가입 페이지입니다. </h1>
+<div class="bg-light text-black p-5" id="registerform">
+    <form class="container" action="/registerResult" method="post">
+        <div class="mb-3">
+            <h2>마루설아 회원가입 페이지</h2>
+            <label for="id" class="form-label"></label>
+            <input type="text" class="form-control" id="id" placeholder="아이디">
+
+            <label for="password" class="form-label"></label>
+            <input type="text" class="form-control" id="password" placeholder="패스워드">
+            <br/>
+        </div>
+
+        <div style="text-align: center;">
+            <button id="register" type="submit" class="btn btn-success">가입</button>
+            <button id="register" type="button" class="btn btn-warning" onclick="location.href='/'">취소</button>
+        </div>
+    </form>
 </div>
 
 
